fixing alignment issues

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -22,17 +22,23 @@ body {
 
 header {
     // height: 10vh;
-    height: 7.5vh;
+    height: 7.6vh;
+    // height: 7.5vh;
 
     .container {
         display: flex;
         // justify-content: space-around;
+        // justify-content: space-between;
         justify-content: space-between;
         align-items: center;
         // background-color: $nav;
         // height: inherit;
         width: 100%;
-        height: 10vh;
+        // height: 10vh;
+    }
+
+    img.fashionImg {
+        width: 30%;
     }
 
     .menu {
@@ -42,11 +48,14 @@ header {
 }
 
 .container {
-    padding-left: 10vw;
+    // padding-left: 10vw;
+    // padding-left: 8vw;
+    padding-left: 5vw;
 }
 
 main {
     height: 98vh;
+    background-color: $lightish;
 
     nav {
         position: absolute;
@@ -85,6 +94,10 @@ main {
     //     }
     // }
 
+    li {
+        list-style-type: none;
+    }
+
     ol.pages {
         height: 100%;
         width: 100%;
@@ -98,6 +111,7 @@ main {
             // width: 100%;
             height: 100%;
             counter-increment: header;
+            // list-style-type: none;
             // display: flex;
 
             .left-col, .right-col {
@@ -167,7 +181,8 @@ p {
 
 img.nextImage {
     // width: 50%;
-    width: 100%;
+    // width: 100%;
+    width: 50%;
 }
 
 // .left-col {
